changed gap fixed circles on dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -234,7 +234,7 @@
 .dashboard-middle-top {
   display: flex;
   flex-direction: row;
-  gap: 45px;
+  gap: 25px;
 }
 
 .dashboard-achivements {
